removed the seawater dependency

--- a/nbs/98_basic_hydro_functions.ipynb
+++ b/nbs/98_basic_hydro_functions.ipynb
@@ -62,9 +62,7 @@
     "import pandas as pd\n",
     "from fastcore.test import *\n",
     "import pkgutil\n",
-    "from io import BytesIO\n",
-    "from seawater import dens\n",
-    "from seawater.library import T90conv"
+    "from io import BytesIO"
    ]
   },
   {
@@ -93,45 +91,6 @@
     "    water_properties_df = pd.read_parquet(BytesIO(water_properties))\n",
     "    \n",
     "    return water_properties_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47cd14b4",
-   "metadata": {},
-   "source": [
-    "## Calculate the Salinity of Water"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab4e393f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "def calc_salinity(measured_density:float, #measured water density [kg/m3]\n",
-    "                  measured_temperature:float #measured water temperature [degC]\n",
-    "                  ) -> float:\n",
-    "    \"\"\"calculate water salinity from density and temperature using UNESCO 1983 (EOS 80) polynomial\n",
-    "\n",
-    "    Args:\n",
-    "        measured_density (float): measured water density\n",
-    "        measured_temperature (float): measured water temperature\n",
-    "\n",
-    "    Returns:\n",
-    "        float: water salinity\n",
-    "    \"\"\"    \n",
-    "    s = np.arange(0, 40, 0.02) #salinity\n",
-    "    t = T90conv(np.ones(len(s))*measured_temperature) #temperature\n",
-    "    p = np.zeros(len(s)) #pressure (sea level)\n",
-    "\n",
-    "    salinity_calc = pd.DataFrame({'salinity':s, 'residual':np.abs((dens(s, t, p) - (np.ones(len(s)) * measured_density)))})\n",
-    "    salinity = salinity_calc.loc[salinity_calc['residual']==salinity_calc['residual'].min(), 'salinity']\n",
-    "    out = np.around(salinity.item(), 3)\n",
-    "    \n",
-    "    return out "
    ]
   },
   {
